--- a/stylesGUI.css
+++ b/stylesGUI.css
@@ -240,3 +240,132 @@ body.dark-mode .site-buttons button {
     grid-row: 8/9;
     background: indigo;
 }
+
+
+/* Media queries for medium-sized screens (max-width: 1200px) */
+@media screen and (max-width: 1200px) {
+    .container {
+        grid-template-columns: repeat(2, 1fr); /* 2 columns */
+        grid-template-rows: repeat(8, 1fr);
+    }
+
+    .item-1 {
+        grid-column: 1/3; /* Spans full width of 2 columns */
+        grid-row: 1/4;
+    }
+
+    .item-2 {
+        grid-column: 1/2;
+        grid-row: 4/6;
+    }
+
+    .item-3 {
+        grid-column: 2/3;
+        grid-row: 4/6;
+    }
+
+    .item-4 {
+        grid-column: 1/2;
+        grid-row: 6/7;
+    }
+
+    .item-5 {
+        grid-column: 2/3;
+        grid-row: 6/7;
+    }
+
+    .item-6 {
+        grid-column: 1/2;
+        grid-row: 7/8;
+    }
+
+    .item-7 {
+        grid-column: 2/3;
+        grid-row: 7/8;
+    }
+
+    .item-8 {
+        grid-column: 1/2;
+        grid-row: 8/9;
+    }
+
+    .item-9 {
+        grid-column: 2/3;
+        grid-row: 8/9;
+    }
+
+    .item-10 {
+        grid-column: 1/2;
+        grid-row: 9/10;
+    }
+
+    .item-11 {
+        grid-column: 2/3;
+        grid-row: 9/10;
+    }
+}
+
+/* Media queries for small screens (max-width: 768px) */
+@media screen and (max-width: 768px) {
+    .container {
+        grid-template-columns: 1fr; /* 1 column */
+        grid-template-rows: repeat(11, 1fr); /* Stacking vertically */
+        padding: 10px;
+    }
+
+    .item-1 {
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+
+    .item-2 {
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+
+    .item-3 {
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+
+    .item-4 {
+        grid-column: 1/2;
+        grid-row: 4/5;
+    }
+
+    .item-5 {
+        grid-column: 1/2;
+        grid-row: 5/6;
+    }
+
+    .item-6 {
+        grid-column: 1/2;
+        grid-row: 6/7;
+    }
+
+    .item-7 {
+        grid-column: 1/2;
+        grid-row: 7/8;
+    }
+
+    .item-8 {
+        grid-column: 1/2;
+        grid-row: 8/9;
+    }
+
+    .item-9 {
+        grid-column: 1/2;
+        grid-row: 9/10;
+    }
+
+    .item-10 {
+        grid-column: 1/2;
+        grid-row: 10/11;
+    }
+
+    .item-11 {
+        grid-column: 1/2;
+        grid-row: 11/12;
+    }
+}
+
