--- a/stylesGUI.css
+++ b/stylesGUI.css
@@ -184,7 +184,7 @@ body.dark-mode .site-buttons button {
 }
 
 .item-1 {
-    grid-column: 1/4;
+    grid-column: 1/3;
     grid-row: 1/5;
     display: flex;
     flex-direction: column;
@@ -194,6 +194,12 @@ body.dark-mode .site-buttons button {
     font-size: 12px;
     overflow: hidden;
  }
+
+.item-12  {
+    grid-column: 3/4;
+    grid-row: 1/5;
+}
+
 .item-1 h1{
     font-size: 2.5em;
     margin-bottom: 10px;
@@ -317,6 +323,7 @@ body.dark-mode .site-buttons button {
 }
 
 .item-9 {
+    grid-row: 8/9;
     display: flex;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
