--- a/stylesGUI.css
+++ b/stylesGUI.css
@@ -2,6 +2,62 @@ html {
     font-family: "Montserrat", sans-serif;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+    border-radius: 5px;
+}
+
+.dark-mode .modal-content {
+    background-color: #333;
+    color: #fff;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.dark-mode .close:hover,
+.dark-mode .close:focus {
+    color: #fff;
+}
+
+.item-5, .item-8 {
+    cursor: pointer;
+}
+
+.item-5:hover, .item-8:hover {
+    opacity: 0.8;
+}
+
+
 html, body {
     height: 100%;
     margin: 0;
@@ -198,6 +254,13 @@ body.dark-mode .site-buttons button {
 .item-12  {
     grid-column: 3/4;
     grid-row: 1/5;
+
+    overflow: hidden;
+}
+.item-12 img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
 }
 
 .item-1 h1{
@@ -251,7 +314,7 @@ body.dark-mode .site-buttons button {
 .item-2 {
     grid-column: 4/5;
     grid-row: 1/7;
-    font-size: 12px;
+    font-size: 15px;
  }
 .item-3 ul {
   list-style-type: none;
@@ -381,6 +444,12 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     .item-2 {
         grid-column: 1/2;
         grid-row: 4/6;
+        font-size: 12px;
+    }
+    .item-12 {
+        grid-column: 1/3;
+        grid-row: 5/6;
+        display: none;
     }
 
     .item-3 {
@@ -446,7 +515,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
     .container {
         grid-template-columns: 1fr; /* 1 column */
-        grid-template-rows: repeat(11, 1fr); /* Stacking vertically */
+        grid-template-rows: repeat(12, 1fr); /* Stacking vertically */
         padding: 10px;
     }
 
@@ -457,18 +526,25 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     min-height: 450px;
 
     }
+    .item-12 {
+        grid-row: 2 !important;
+        min-width: 300px;
+        min-height: 200px;
+        display: block;
+    }
 
     .item-2 {
         grid-column: 1/2;
-        grid-row: 2/3;
-   min-width: 400px;
-    min-height: 375px;
+        grid-row: 3 !important;
+        min-width: 400px;
+        min-height: 375px;
+        font-size: 12px;
 
     }
 
     .item-3 {
         grid-column: 1/2;
-        grid-row: 3/4;
+        grid-row: 4 !important;
    min-width: 300px;
     min-height: 250px;
         font-size: 12px;
@@ -484,7 +560,7 @@ item-3 ul {
 
     .item-4 {
         grid-column: 1/2;
-        grid-row: 4/5;
+        grid-row: 5 !important;
     min-width: 300px;
     min-height: 75px;
 
@@ -493,7 +569,7 @@ item-3 ul {
 
     .item-5 {
         grid-column: 1/2;
-        grid-row: 5/6;
+        grid-row: 6 !important;
         min-width: 300px; 
         min-height: 400px;
     }
