--- a/stylesGUI.css
+++ b/stylesGUI.css
@@ -405,6 +405,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
     .item-1 {
         grid-column: 1/3; /* Spans full width of 2 columns */
         grid-row: 1/4;
+        font-size: 10px;
     }
 
     .item-2 {
