--- a/stylesGUI.css
+++ b/stylesGUI.css
@@ -428,6 +428,10 @@ item-3 ul {
   padding: 0;
   margin: 0; 
 }
+    item-3 li {
+        padding: 0px;
+        gap: 0;
+    }
 
 
     .item-4 {
@@ -453,6 +457,9 @@ item-3 ul {
     .item-8 {
         grid-column: 1/2;
         grid-row: 8/9;
+    }
+    .item-8 .hideItem8 {
+        display: none;
     }
 
     .item-9 {
@@ -540,7 +547,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
         grid-column: 1/2;
         grid-row: 6 !important;
         min-width: 300px; 
-        min-height: 150px;
+        min-height: 120px;
     }
 
     .item-6 {
@@ -568,7 +575,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
         grid-row: 8/9;
 
         min-width: 300px; 
-        min-height: 150px;
+        min-height: 50px;
     }
 
     .item-9 {
